examples/test/testpolicy17858.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17858
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key14: value36
      key18: value32
      key43: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value45
          key27: value43
      podSelector:
        matchLabels:
          key1: value18
          key7: value36
